--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Module</title>
+    <title>Class-One</title>
+    <!-- css -->
+    <script src= "js/main.js"> </script>
 </head>
 <body>
+    <h1>hola mundo</h1>
     
 </body>
 </html>
