peso en la luna

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class-One</title>
     <!-- css -->
-    <script src= "js/main.js"> </script>
+    <!-- <script src= "js/main.js"> </script> -->
+    <script src="js/weight_in_moon.js"></script>
 </head>
 <body>
     <h1>hola mundo</h1>
