--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "js/main.js"></script>
-    <title>JavaScript Module</title>
+    <!-- <script src = "js/main.js"></script> -->
+    <script src = "js/weather_exercise.js"></script>
+    <title>Clase Dos</title>
 </head>
 <body>
     <h1>Hola Koders</h1>
