--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src = "js/main.js"></script> -->
-    <script src = "js/weather_exercise.js"></script>
+    <script src = "js/homework_exercises.js"></script>
     <title>Clase Dos</title>
 </head>
 <body>
