--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "js/reduce_method.js"></script>
+    <script src = "js/homework_objects.js"></script>
     <title>JavaScript Module</title>
 </head>
 <body>
