--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "js/main.js"></script>
+    
     <title>JavaScript Module</title>
 </head>
 <body>
-    <h1>Hola Koders</h1>
+    <div id="container">
+        
+    </div>
+
+    <script src = "js/dom.js"></script>
 </body>
 </html>
