--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div id="container">
         
     </div>
+    <div id="container_2">
+
+    </div>
 
     <script src = "js/dom.js"></script>
 </body>
