--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
     </div>
 
+    <button onclick="addElements(`#container_3`, koders,15)">TODOS</button>
+    <button onclick="filterKoders(`a`)">A</button>
+    <button onclick="filterKoders(`o`)">O</button>
+    <button onclick="filterKoders(`b`)">B</button>
+    
+    <div id="container_3">
+
+    </div>
+
+    
+
     <script src = "js/dom.js"></script>
 </body>
 </html>
