--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "js/main.js"></script>
     <title>JavaScript Module</title>
 </head>
 <body>
     <h1>Hola Koders</h1>
+
+
+    <select name="" id="order">
+        <option value="">Seleccionar...</option>
+        <option value="ascend">Ascendiente</option>
+        <option value="descend">Descendiente</option>
+    </select>
+    <script src = "js/events_homework.js"></script>
 </body>
 </html>
