--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
     <h1>Hola Koders</h1>
 
+    <ul id="container">
 
-    <select name="" id="order">
+    </ul>
+    <button onclick="sortList()">SORT</button>
+    <select name="" id="order" onchange="sortList()">
         <option value="">Seleccionar...</option>
         <option value="ascend">Ascendiente</option>
         <option value="descend">Descendiente</option>
