--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <ul id="container">
 
     </ul>
-    <button onclick="sortList()">SORT</button>
+    
     <select name="" id="order" onchange="sortList()">
-        <option value="">Seleccionar...</option>
+        <option value="">Seleccionar</option>
         <option value="ascend">Ascendiente</option>
         <option value="descend">Descendiente</option>
     </select>
