--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
 <body>
     <h1>Hola Koders</h1>
 
-    <ul id="container">
-
-    </ul>
-    
     <select name="" id="order" onchange="sortList()">
         <option value="">Seleccionar</option>
         <option value="ascend">Ascendiente</option>
         <option value="descend">Descendiente</option>
     </select>
+    <ul id="container">Koders</ul>
     <script src = "js/events_homework.js"></script>
 </body>
 </html>
