--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>JavaScript Module</title>
 </head>
 <body>
-    <h1>Hola Koders</h1>
+   <button onclick="addElements('#lista', 10, kodersArr)" >Todos</button>
+        <button onclick="filterKoders('a')" >A</button>
+        <button onclick="filterKoders('o')" >O</button>
+        <button onclick="filterKoders('r')" >R</button>
+        
+        <select name="" id="orden">
+            <option value="" selected>Seleccionar</option>
+            <option value="a">Ascendente</option>
+            <option value="d">Descendente</option>
+        </select>
+
+        <ul id="lista"></ul>
+
+        <script src="js/main.js" ></script>
+        <!-- <script src="js/dom.js"></script> -->
+        <script src="js/events.js"></script>
+        <script src="js/homework.js"></script>
 </body>
 </html>
