--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JavaScript Module</title>
 </head>
 <body>
-   <button id="addList" >Todos</button>
+        <button id="addList" >Todos</button>
         <button id="botones1" value="a">A</button>
         <button id="botones2" value="o">O</button>
         <button id="botones3" value="r">R</button>
@@ -17,7 +17,8 @@
             <option value="a">Ascendente</option>
             <option value="d">Descendente</option>
         </select>
-
+        <input type="text" id="search">
+        
         <ul id="container"></ul>
 
         <script src="js/main.js" ></script>
