--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "js/main.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <title>JavaScript Module</title>
 </head>
 <body>
     <h1>Hola Koders</h1>
+
+
+    <div id="desk">
+        DESKTOP
+    </div>
+
+    <div id="mob">
+        MOBILE
+    </div>
+
+
+    <script src = "js/main.js"></script>
 </body>
 </html>
