--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JavaScript Module</title>
 </head>
 <body>
-    <h1>Hola Koders</h1>
+    <!-- <h1>Hola Koders</h1>
 
 
     <div id="desk">
@@ -16,9 +16,10 @@
 
     <div id="mob">
         MOBILE
-    </div>
+    </div> -->
 
 
-    <script src = "js/main.js"></script>
+    <!-- <script src = "js/main.js"></script> -->
+    <script src = "js/homework.js"></script>
 </body>
 </html>
