--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
     </div> -->
 
 
+    <!-- homework2 -->
+    <div class="caja">
+        <p id="mensajep">Este sitio se ve mejor en desktop</p>
+
+    </div>
+
+
     <!-- <script src = "js/main.js"></script> -->
-    <script src = "js/homework.js"></script>
+    <!-- <script src = "js/homework.js"></script> -->
+    <script src = "js/homework2.js"></script>
 </body>
 </html>
