--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "js/main.js"></script>
+    
     <title>JavaScript Module</title>
 </head>
 <body>
     <h1>Hola Koders</h1>
+
+        <div>
+            <button id="getusers">Obtener usuario</button>
+            <button id="getpost">Obtener post 2</button>
+            <ul class="list__users">
+            </ul>
+            <ul class="list__post">
+            </ul>
+        </div>
+    
+        <script src = "js/main.js"></script>
 </body>
 </html>
