ya aparecen en users

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </ul>
         </div>
     
-        <script src = "js/main.js"></script>
+        <!-- <script src = "js/main.js"></script> -->
+        <script src = "js/homework.js"></script>
 </body>
 </html>
