--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
         <!-- <script src = "js/main.js"></script> -->
         <script src = "js/homework.js"></script>
+        <!-- <script src="js/profeexercises.js"></script> -->
 
          <script src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
