--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src = "js/main.js"></script>
     <title>JavaScript Module</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="css/style.css">   -->
 </head>
 <body>
-    <h1>Hola Koders</h1>
+        <div>
+            <ul class="list__users">    
+            </ul>
+            <a href="newuser.html">Agregar usuario</a>
+        </div>
+
+
+        <script src="js/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <!-- <script src="js/main.js" ></script> -->
+        
 </body>
 </html>
