CSS terminado agregando funcion delete

--- a/newuser.html
+++ b/newuser.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="css/style.css">  
     <title>Document</title>
 </head>
 <body>
-     <form action="" >
-        <input type="text" id="name">
-        <input type="text" id="lastname">
-        <input type="text" id="url_photo">
+     <form action="" class="container list_prin" >
+        <input placeholder="Name" type="text" id="name">
+        <input placeholder="Lastname" type="text" id="lastname">
+        <input placeholder="Photo" type="text" id="url_photo">
+        <button id="btnSave">Guardar</button>
+    </form>
+
+    <form action="" class="container list_prin" >
+        <input placeholder="ID" type="text" id="idDelete">
+     
         <button id="btnSave">Guardar</button>
     </form>
 
