--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <script src = "js/main.js"></script>
     <title>JavaScript Module</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="css/style.css">   -->
+    <link rel="stylesheet" href="css/style.css">  
 </head>
 <body>
-        <div>
-            <ul class="list__users">    
-            </ul>
-            <a href="newuser.html">Agregar usuario</a>
+        <div class="container-fluid">
+            <div class="container">
+                <div class="card list_prin">
+                    <ul class="list__users card-body row d-flex justify-content-center">    
+                    </ul>
+                    <a href="newuser.html" id="adduserBtn">Agregar usuario</a>
+                </div>
+            </div>
         </div>
 
 
