--- a/newuser.html
+++ b/newuser.html
@@ -17,7 +17,7 @@
     <form action="" class="container list_prin" >
         <input placeholder="ID" type="text" id="idDelete">
      
-        <button id="btnSave">Guardar</button>
+        <button id="btnDelete">Delete</button>
     </form>
 
 
