--- a/ajax.html
+++ b/ajax.html
@@ -10,8 +10,10 @@
     <div class="list__users">
 
     </div>
+    <a href="http://127.0.0.1:5500/newuser.html">AGREGAR USUARIO</a>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/crud.js"></script>
     <script src="js/ajax.js"></script>
 </body>
 </html>
